<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/rotate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rotate"
        app:layout_constraintBottom_toTopOf="@id/move_button"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/move_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move"
        app:layout_constraintBottom_toTopOf="@id/scale_button"
        app:layout_constraintTop_toBottomOf="@id/rotate_button" />

    <Button
        android:id="@+id/scale_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scale"
        app:layout_constraintBottom_toTopOf="@id/fade_button"
        app:layout_constraintTop_toBottomOf="@id/move_button" />

    <Button
        android:id="@+id/fade_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fade"
        app:layout_constraintBottom_toTopOf="@id/change_color_button"
        app:layout_constraintTop_toBottomOf="@id/scale_button" />

    <Button
        android:id="@+id/change_color_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_color"
        app:layout_constraintTop_toBottomOf="@id/fade_button" />

    <ImageView
        android:id="@+id/star_image_view"
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:layout_marginBottom="@dimen/image_bottom_margin"
        android:src="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>